--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,10 +51,10 @@ services:
       retries: 5
       start_period: 30s
 
-  # Backend API (Go)
+  # Backend API (Python FastAPI)
   backend:
     build:
-      context: ./server-go
+      context: ./server
       dockerfile: Dockerfile
     container_name: podcast-backend
     restart: unless-stopped
@@ -63,25 +63,30 @@ services:
     environment:
       - MONGODB_URL=mongodb://mongodb:27017
       - MONGODB_DB_NAME=podcast_db
-      - AWS_DEFAULT_REGION=us-east-1
       - AWS_ACCESS_KEY_ID=test
       - AWS_SECRET_ACCESS_KEY=test
-      - S3_BUCKET_NAME=${S3_BUCKET_NAME:-podcast-audio}
+      - AWS_REGION=us-east-1
+      - S3_BUCKET_NAME=${S3_BUCKET_NAME:-podcast-transcripts}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - WHISPER_SERVICE_URL=http://whisper:9000
       - CORS_ORIGINS=http://localhost:3000,http://frontend:3000
-      - LOG_LEVEL=${LOG_LEVEL:-info}
+      - LOG_LEVEL=${LOG_LEVEL:-INFO}
       - APP_HOST=0.0.0.0
       - APP_PORT=8000
+    volumes:
+      - ./server/app:/app/app:ro
+      - ./server/scripts:/app/scripts:ro
     depends_on:
       mongodb:
         condition: service_healthy
       localstack:
         condition: service_healthy
+      whisper:
+        condition: service_healthy
     networks:
       - podcast-network
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 10s
       timeout: 5s
       retries: 5
