updates to get bulk transcribe working

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,34 +22,34 @@ services:
       retries: 5
       start_period: 20s
 
-  # LocalStack (AWS Services Emulation)
-  localstack:
-    image: localstack/localstack:latest
-    container_name: podcast-localstack
-    restart: unless-stopped
-    ports:
-      - "4566:4566"
-      - "4510-4559:4510-4559"
-    environment:
-      - SERVICES=s3,lambda,stepfunctions
-      - DEBUG=1
-      - DATA_DIR=/tmp/localstack/data
-      - DOCKER_HOST=unix:///var/run/docker.sock
-      - AWS_DEFAULT_REGION=us-east-1
-      - AWS_ACCESS_KEY_ID=test
-      - AWS_SECRET_ACCESS_KEY=test
-    volumes:
-      - localstack-data:/tmp/localstack
-      - /var/run/docker.sock:/var/run/docker.sock
-      - ./localstack-init:/etc/localstack/init:ro
-    networks:
-      - podcast-network
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:4566/_localstack/health"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
+  # LocalStack (AWS Services Emulation) - DISABLED FOR BULK TRANSCRIBE TESTING
+  # localstack:
+  #   image: localstack/localstack:latest
+  #   container_name: podcast-localstack
+  #   restart: unless-stopped
+  #   ports:
+  #     - "4566:4566"
+  #     - "4510-4559:4510-4559"
+  #   environment:
+  #     - SERVICES=s3,lambda,stepfunctions
+  #     - DEBUG=1
+  #     - DATA_DIR=/tmp/localstack/data
+  #     - DOCKER_HOST=unix:///var/run/docker.sock
+  #     - AWS_DEFAULT_REGION=us-east-1
+  #     - AWS_ACCESS_KEY_ID=test
+  #     - AWS_SECRET_ACCESS_KEY=test
+  #   volumes:
+  #     - localstack-data:/tmp/localstack
+  #     - /var/run/docker.sock:/var/run/docker.sock
+  #     - ./localstack-init:/etc/localstack/init:ro
+  #   networks:
+  #     - podcast-network
+  #   healthcheck:
+  #     test: ["CMD", "curl", "-f", "http://localhost:4566/_localstack/health"]
+  #     interval: 10s
+  #     timeout: 5s
+  #     retries: 5
+  #     start_period: 30s
 
   # Backend API (Python FastAPI)
   backend:
@@ -79,8 +79,6 @@ services:
     depends_on:
       mongodb:
         condition: service_healthy
-      localstack:
-        condition: service_healthy
       whisper:
         condition: service_healthy
     networks:
@@ -102,10 +100,12 @@ services:
     environment:
       - ASR_MODEL=base
       - ASR_ENGINE=openai_whisper
+    volumes:
+      - whisper-models:/root/.cache/whisper
     networks:
       - podcast-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:9000/"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -154,3 +154,5 @@ volumes:
     name: podcast-mongodb-data
   localstack-data:
     name: podcast-localstack-data
+  whisper-models:
+    name: podcast-whisper-models
