change the ports on the dev env

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@
 # ========================================
 # API URL for frontend to connect to backend
 VITE_API_URL=http://localhost:8000
+VITE_API_BASE_URL=http://localhost:8000/api
 
 # ========================================
 # BACKEND CONFIGURATION
@@ -31,7 +32,7 @@ WHISPER_SERVICE_URL=http://whisper:9000
 # API SERVER CONFIGURATION
 # ========================================
 # CORS Origins (comma-separated)
-CORS_ORIGINS=http://localhost:3000,http://frontend:3000
+CORS_ORIGINS=http://localhost:3017,http://frontend:3017
 
 # Logging Level (debug, info, warning, error)
 LOG_LEVEL=info
