--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,7 +69,7 @@ services:
       - S3_BUCKET_NAME=${S3_BUCKET_NAME:-podcast-transcripts}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - WHISPER_SERVICE_URL=http://whisper:9000
-      - CORS_ORIGINS=http://localhost:3000,http://frontend:3000
+      - CORS_ORIGINS=http://localhost:3017,http://frontend:3017
       - LOG_LEVEL=${LOG_LEVEL:-INFO}
       - APP_HOST=0.0.0.0
       - APP_PORT=8000
@@ -119,9 +119,10 @@ services:
     container_name: podcast-frontend
     restart: unless-stopped
     ports:
-      - "3000:3000"
+      - "3017:3017"
     environment:
       - VITE_API_URL=http://localhost:8000
+      - VITE_API_BASE_URL=http://localhost:8000/api
       - NODE_ENV=development
     volumes:
       - ./src:/app/src:ro
@@ -136,7 +137,7 @@ services:
     networks:
       - podcast-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000"]
+      test: ["CMD", "curl", "-f", "http://localhost:3017"]
       interval: 10s
       timeout: 5s
       retries: 5
