--- a/lambdas/Dockerfile.python
+++ b/lambdas/Dockerfile.python
@@ -3,10 +3,10 @@
 FROM public.ecr.aws/lambda/python:3.11 AS base
 
 # Install common system dependencies
-RUN dnf install -y \
+RUN yum install -y \
     zip \
-    && dnf clean all \
-    && rm -rf /var/cache/dnf
+    && yum clean all \
+    && rm -rf /var/cache/yum
 
 # Create layer directory structure
 RUN mkdir -p /opt/python
@@ -17,7 +17,7 @@ RUN mkdir -p /opt/python
 FROM base AS python-deps-builder
 
 # Copy shared requirements
-COPY layers/python-deps/requirements.txt /tmp/requirements.txt
+COPY lambdas/layers/python-deps/requirements.txt /tmp/requirements.txt
 
 # Install Python dependencies to layer location
 RUN pip install --no-cache-dir -r /tmp/requirements.txt -t /opt/python
@@ -28,7 +28,7 @@ RUN pip install --no-cache-dir -r /tmp/requirements.txt -t /opt/python
 FROM base AS ffmpeg-builder
 
 # Install download tools
-RUN dnf install -y wget tar xz && dnf clean all
+RUN yum install -y wget tar xz && yum clean all
 
 # Download and extract ffmpeg static binary
 WORKDIR /tmp
@@ -55,13 +55,13 @@ COPY --from=python-deps-builder /opt/python /opt/python
 ENV PYTHONPATH=/opt/python:${PYTHONPATH}
 ENV PATH=/opt/bin:${PATH}
 
-# Copy Lambda function code
-COPY chunking-lambda/lambda_handler.py ${LAMBDA_TASK_ROOT}/
-
-# Install chunking-specific dependencies (pydub)
+# Install chunking-specific dependencies (pydub) into layer
 COPY chunking-lambda/requirements.txt /tmp/chunking-requirements.txt
-RUN pip install --no-cache-dir -r /tmp/chunking-requirements.txt -t ${LAMBDA_TASK_ROOT}/ \
+RUN pip install --no-cache-dir -r /tmp/chunking-requirements.txt -t /opt/python/ \
     && rm /tmp/chunking-requirements.txt
+
+# Copy Lambda function code (just the handler, not dependencies)
+COPY chunking-lambda/lambda_handler.py ${LAMBDA_TASK_ROOT}/
 
 CMD ["lambda_handler.lambda_handler"]
 
@@ -76,14 +76,14 @@ COPY --from=python-deps-builder /opt/python /opt/python
 # Add layer path to Python path
 ENV PYTHONPATH=/opt/python:${PYTHONPATH}
 
-# Copy Lambda function code
+# Install whisper-specific dependencies (openai) into layer
+COPY whisper-lambda/lambda/requirements.txt /tmp/whisper-requirements.txt
+RUN pip install --no-cache-dir -r /tmp/whisper-requirements.txt -t /opt/python/ \
+    && rm /tmp/whisper-requirements.txt
+
+# Copy Lambda function code (just the handler, not dependencies)
 COPY whisper-lambda/lambda/handler.py ${LAMBDA_TASK_ROOT}/
 COPY whisper-lambda/lambda/__init__.py ${LAMBDA_TASK_ROOT}/
-
-# Install whisper-specific dependencies (openai)
-COPY whisper-lambda/lambda/requirements.txt /tmp/whisper-requirements.txt
-RUN pip install --no-cache-dir -r /tmp/whisper-requirements.txt -t ${LAMBDA_TASK_ROOT}/ \
-    && rm /tmp/whisper-requirements.txt
 
 CMD ["handler.lambda_handler"]
 
@@ -93,7 +93,7 @@ CMD ["handler.lambda_handler"]
 FROM base AS package-builder
 
 # Install zip
-RUN dnf install -y zip wget tar xz && dnf clean all
+RUN yum install -y zip wget tar xz && yum clean all
 
 WORKDIR /build
 
