--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -255,7 +255,7 @@ services:
     ports:
       - "9000:9000"
     environment:
-      - ASR_MODEL=base
+      - ASR_MODEL=tiny
       - ASR_ENGINE=openai_whisper
     volumes:
       - whisper-models:/root/.cache/whisper
